--- a/_data/index.yml
+++ b/_data/index.yml
@@ -10,7 +10,7 @@ apps:
       - path: starting-a-journal
       - path: learning-ojs-3
       - path: admin-guide
-      - path: upgrade-guide
+      - path: tech-upgrade-guide
       - path: developer-docs
         isDeveloper: true
       - path: upgrading-guide
