--- a/_data/versions.yml
+++ b/_data/versions.yml
@@ -6,6 +6,9 @@ crossref-ojs-manual:
   3.2: /crossref-ojs-manual/en/
   3.1.2: /crossref-ojs-manual/3.1.2/en/
   < 3.1: /crossref-ojs-manual/crossref-v1-deposit/en/
+dev-documentation:
+  3.4: /dev/documentation/en
+  3.3: /dev/documentation/3.3/en
 importing-exporting:
   current: /importing-exporting/en/
   3.0: /importing-exporting/3.0/en/
